re-organize components

--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -1,719 +1,9 @@
 @import 'variables';
 @import 'functions';
 
-// Courseware garbage
-.seq_contents.tex2jax_ignore.asciimath2jax_ignore {
-  display: none;
-}
-
-// Staff status bar
-.wrapper-preview-menu {
-  margin: 0 auto;
-  padding: 0;
-  background-color: #0075b4;
-  display: block;
-
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-.preview-menu {
-  padding: 15px 2%;
-  width: auto;
-  margin: 0 auto;
-  max-width: 1920px;
-}
-
-.preview-actions {
-  padding-left: 0;
-  display: inline-block;
-  margin-bottom: 0;
-}
-
-.action-preview {
-  display: inline-block;
-
-  form {
-    margin: 0;
-  }
-
-  label {
-    margin-right: 10px;
-    display: inline-block;
-    margin-bottom: 0;
-    vertical-align: middle;
-    color: #fff;
-    max-width: 100%;
-    font-weight: 700;
-    font-style: normal;
-  }
-
-  select {
-    margin-right: 20px;
-    vertical-align: baseline;
-  }
-}
-
-.action-preview-username-container {
-  display: none;
-}
-
-// Courseware Tab Navigation
-.wrapper-course-material {
-  margin: 0 auto;
-  padding: 0;
-  border-bottom: none;
-}
-
-.course-material {
-  padding: 0;
-  width: auto;
-  max-width: inherit;
-  margin: 0 auto;
-}
-
-.course-tabs {
-  padding: 0;
-  font-weight: normal;
-  margin-left: 0;
-
-  .tab {
-    display: inline-block;
-    list-style: none;
-  }
-
-  a {
-    padding: 10px 15px 13px 0;
-    border-bottom: none;
-    color: currentColor;
-    display: block;
-    line-height: 20.72px;
-
-    &.active:focus:hover {
-      box-shadow: none;
-      text-shadow: none;
-      background: none;
-      border: none;
-      text-decoration: none;
-
-      b {
-        color: currentColor;
-        border-bottom: 2px solid currentColor;
-      }
-    }
-
-    &:hover {
-      color: currentColor;
-      border: none !important;
-      background: none;
-      text-decoration: none;
-
-      b {
-        color: currentColor;
-        border-bottom: 1px solid currentColor;
-        text-decoration: none;
-      }
-    }
-
-    b {
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      border-bottom: 1px dashed transparent;
-      vertical-align: -0.15em;
-      font-size: 1.2em;
-    }
-  }
-}
-
-// Course Accordion Nav
-.course-index {
-  .accordion {
-    font-family: $gym-font-stack;
-    background-color: #444;
-
-    .course-navigation {
-      .group-heading {
-        font-family: $gym-font-stack;
-        position: relative;
-        display: block;
-        padding: 15px 20px 15px 40px;
-        text-align: left;
-        font-size: 16px;
-        line-height: 23.68px;
-
-        &.active .icon {
-          color: #f89820;
-        }
-
-        .icon {
-          position: absolute;
-          left: 20px;
-          top: 20px;
-          font-size: 0.875em;
-          color: #c8c8c8;
-        }
-      }
-
-      .chapter-content-container {
-        background-color: inherit;
-
-        .chapter-menu {
-          display: none;
-          padding: 0 14px 0 30px;
-          overflow: hidden;
-
-          .menu-item {
-            margin: 4px 0;
-            background: inherit;
-            font-weight: 600;
-
-            &.active {
-              a {
-                color: #f89820;
-              }
-            }
-            &:last-of-type {
-              padding-bottom: 10px;
-            }
-
-            .accordion-nav {
-              background: inherit;
-              border: none;
-              position: relative;
-              display: block;
-              padding: 5px 10px;
-
-              h1,
-              h2,
-              h3,
-              h4,
-              h5,
-              h6,
-              p {
-                font-family: $gym-font-stack;
-              }
-            }
-
-            a {
-              color: #ebebeb;
-              background: inherit;
-              border: none;
-            }
-
-            .subtitle {
-              display: none;
-            }
-          }
-        }
-      }
-
-      .button-chapter {
-        &:hover {
-          border: none;
-        }
-
-        &.active .group-heading {
-          color: #ebebeb;
-        }
-      }
-
-      p.subtitle {
-        display: none;
-      }
-    }
-
-    ul.ui-accordion-content a p {
-      color: #ebebeb;
-    }
-    ul.ui-accordion-content li.active a p {
-      color: #f89820;
-      font-weight: bold;
-    }
-    .chapter {
-      color: #ebebeb;
-      background: none;
-      box-shadow: none;
-      padding: 0;
-      text-decoration: none;
-      &.active {
-        font-weight: bold;
-      }
-
-      h3 {
-        line-height: 1.3;
-      }
-      a {
-        font-weight: 900;
-        letter-spacing: 0.04em;
-        word-spacing: 0.04em;
-        color: #ebebeb;
-        background: none;
-        box-shadow: none;
-        text-shadow: none;
-        border: none;
-        margin-bottom: 0.3em;
-        p {
-          font-size: 1.2em;
-        }
-      }
-    }
-  }
-}
-
-// Course Wrapper
-.course-wrapper main {
-  padding: 20px;
-
-  .hd-1,
-  .hd-2,
-  .hd-3,
-  .hd-4,
-  .hd-5,
-  .hd-6,
-  .hd-7,
-  .hd-8 {
-    margin: 0;
-    font-weight: 400;
-    font-size: inherit;
-    line-height: inherit;
-    color: #474747;
-  }
-
-  .hd-3 {
-    margin-bottom: 10px;
-  }
-
-  h2 {
-    font-weight: 600;
-    text-transform: initial;
-    font-size: 1.5em;
-    line-height: 1.4em;
-  }
-}
-
-.wrap-instructor-info .instructor-info-action {
-  float: right;
-  margin-left: 10px;
-  text-align: right;
-  padding: 5px 10px;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  color: $gym-dark-gray-2;
-  text-transform: uppercase;
-  font-size: 12px;
-  line-height: 17.76px;
-  text-decoration: none;
-
-  &:hover {
-    color: #fff;
-    background-color: $gym-dark-gray-2;
-  }
-}
-
-// Staff Debug Info
-.course-content .vert {
-  padding: 0 0 15px;
-}
-
-// Exam/Quiz/Homework Fixes
-.course-content {
-  ul,
-  ol {
-    padding: 0 0 0 40px;
-    margin: 1em 0;
-  }
-
-  ul {
-    padding-left: 1em;
-    list-style: disc outside none;
-    margin-bottom: 1.41575em;
-    margin-left: 0.75rem;
-
-    li {
-      margin-bottom: 0.70788em;
-      line-height: 1.4em;
-    }
-  }
-
-  // Exam/Quiz
-  .problem {
-    // exam submit buttons
-    .action {
-      margin-top: 20px;
-      min-height: 20px;
-      width: 100%;
-      display: flex;
-      display: -ms-flexbox;
-      -ms-flex-align: start;
-      flex-direction: row;
-      align-items: center;
-      flex-wrap: wrap;
-
-      .submit-attempt-container {
-        padding-bottom: 20px;
-        flex-grow: 1;
-      }
-
-      .submission-feedback {
-        margin-right: 10px;
-        margin-top: 10px;
-        display: inline-block;
-        color: #5e5e5e;
-        font-size: 0.9em;
-        -webkit-font-smoothing: antialiased;
-        vertical-align: middle;
-      }
-
-      .problem-action-button-wrapper {
-        border-right: 1px solid #f2f2f2;
-        display: inline-block;
-
-        &:last-child {
-          border: none;
-        }
-      }
-    }
-
-    input[type="radio"],
-    input[type="checkbox"] {
-      position: relative;
-      left: -1em;
-      font-size: 1.8em;
-      margin-right: -0.8em;
-      top: 1px;
-    }
-
-    fieldset {
-      padding-left: 0;
-      border: none;
-      margin-bottom: 1.2em;
-      width: 100%;
-    }
-
-    label {
-      display: block;
-      font: 1em/1.5 $gym-text-font-stack;
-      color: #444;
-      margin-top: 0;
-      margin-left: 1.6em;
-      width: 100%;
-    }
-
-    pre {
-      padding: 1em;
-    }
-
-    pre code {
-      font-size: 1em;
-      font-family: monospace;
-    }
-    pre code span {
-      font-size: 1em;
-      font-family: monospace;
-    }
-
-    code {
-      padding: 5px;
-      font-size: 0.85em;
-    }
-
-    .solution-span > span {
-      background: #ebebeb;
-      padding: 1.8em;
-      border: 1px solid #ccc;
-      border-radius: 2px;
-      margin: 20px 0;
-      display: block;
-      position: relative;
-
-      &:empty {
-        display: none;
-      }
-
-      p {
-        font: 1em/1.5 $gym-text-font-stack;
-        color: #444;
-        margin-top: 0.84em;
-        margin-left: 0;
-
-        &:first-child {
-          font: 900 1em/1.3 $gym-font-stack;
-          color: #222;
-          letter-spacing: 0.02em;
-          word-spacing: 0.02em;
-          text-transform: uppercase;
-          margin-top: 0;
-          margin-bottom: 1em;
-        }
-      }
-    }
-
-    .problem-progress {
-      font: 1em/1.5 $gym-font-stack;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      word-spacing: 0.02em;
-      color: #222;
-    }
-
-    > div > strong {
-      display: block;
-      font: bold 1.2em/1.4 $gym-font-stack;
-      color: #222;
-      letter-spacing: 0.02em;
-      word-spacing: 0.04em;
-      padding-top: 1.5em;
-      padding-left: 0;
-      border-top: 1px solid #ddd;
-      margin-top: 1.5em;
-    }
-
-    div span.incorrect,
-    div span.incomplete,
-    div span.ui-icon-close {
-      top: -1.55em;
-      left: -1.7em;
-    }
-
-    .choicetextgroup label,
-    .choicegroup label {
-      padding: 10px;
-      padding-left: 38px;
-      position: relative;
-      font-size: 1em;
-      line-height: normal;
-      cursor: pointer;
-      box-sizing: border-box;
-      display: inline-block;
-      clear: both;
-      border: none;
-      // border-radius: 3px;
-      width: 100%;
-      margin-bottom: 0;
-
-      &:hover {
-        border: none;
-      }
-
-      &:after {
-        display: none;
-      }
-    }
-
-    .choicegroup label[class*="_incorrect"]:before,
-    .choicegroup section[class*="_incorrect"]:before {
-      position: absolute;
-      font: 900 2.4em/1 $gym-font-stack;
-      content: "×";
-      color: #f33;
-      margin-top: 2px;
-      margin-left: -1.3em;
-    }
-
-    .choicegroup label[class*="_correct"]:before,
-    .choicegroup section[class*="_correct"]:before {
-      position: absolute;
-      font: 900 1.4em/1 $gym-font-stack;
-      content: "✔";
-      color: #3c3;
-      margin-top: 7px;
-      margin-left: -2.3em;
-
-      p {
-        margin-bottom: 0;
-        font-size: 16px;
-      }
-    }
-
-    div span {
-      &.incorrect,
-      &.incomplete,
-      &.ui-icon-close,
-      &.correct,
-      &.ui-icon-check {
-        background: none;
-      }
-    }
-
-    .gym-button {
-      margin-left: 0;
-      height: 3em;
-      display: inline-block;
-      align-items: inherit;
-      vertical-align: top;
-
-      &.save {
-        margin-right: 10px;
-      }
-
-      &.show {
-        display: inline-block !important;
-      }
-
-      &:focus {
-        box-shadow: none;
-      }
-    }
-
-    .entitlement-action span {
-      display: inline-block;
-    }
-
-    span.unanswered {
-      display: none;
-      visibility: hidden;
-    }
-
-    span.incorrect:before,
-    span.incomplete:before,
-    span.ui-icon-close:before {
-      font: 900 2.4em/1 $gym-font-stack;
-      content: "×";
-      color: #f33;
-    }
-
-    span.correct:before,
-    span.ui-icon-check:before {
-      font: 900 1.4em/1 $gym-font-stack;
-      content: "✔";
-      color: #3c3;
-      display: block;
-      margin-left: -1em;
-      margin-top: 0.4em;
-    }
-  }
-}
-
-#as-seen-in {
-  h1,
-  h2,
-  p {
-    padding-bottom: 30px;
-  }
-
-  ul {
-    box-sizing: border-box;
-  }
-
-  li {
-    width: 18%;
-  }
-}
-
-// Courses Index
-.course-menu {
-  ul {
-    list-style: none;
-    margin: 1.2em 15px 0;
-    padding: 0;
-  }
-
-  li {
-    display: inline;
-    margin-right: 1.2em;
-  }
-
-  a,a:link,a:visited {
-    display: inline-block;
-    font-size: 1.2em;
-    line-height: 1.2;
-    font-family: $gym-font-stack;
-    font-weight: bold;
-    color: #222;
-    text-transform: uppercase;
-    letter-spacing: 0.04em;
-    word-spacing: 0.04em;
-    border-bottom: 1px solid #222;;
-    margin-top: 0.125em;
-
-    &:active,
-    &:hover {
-      color: #222;
-      text-decoration: none;
-      border-bottom-width: 2px;
-      margin-bottom: -0.125rem;
-    }
-  }
-}
-
-.courses-container {
-  .intro {
-    h1 {
-      font-size: font-calc(28, rem, 10px);
-    }
-  }
-
-  p.hero {
-    font-family: $gym-font-stack;
-    font-size: font-calc(22, rem, 10px);
-    line-height: 1.4;
-    padding-bottom: 1em;
-    border-bottom: 1px solid #ddd;
-  }
-}
-
-.listing-courses {
-  list-style: none;
-  padding: 0;
-
-  h1 {
-    font-size: font-calc(32, rem, 10px);
-  }
-
-  h2 {
-    font-size: font-calc(16, rem, 10px);
-  }
-
-  p, li {
-    font-size: font-calc(18, rem, 10px);
-  }
-
-  .course-item {
-    figure img {
-      width: 100%;
-    }
-  
-    figcaption {
-      background: #444;
-      padding: 1.2em;
-    }
-  
-    dl {
-      color: #222;
-      letter-spacing: 0.06em;
-      word-spacing: 0.05em;
-      margin-bottom: 0.6em;
-      margin-left: 1.2em;
-      margin-top: 1em;
-    }
-    dt {
-      font-size: font-calc(16, rem, 10px);
-      line-height: 1.2;
-      font-family: $gym-font-stack;
-      font-weight: 900;
-      color: #222;
-      letter-spacing: 0.06em;
-      word-spacing: 0.05em;
-      text-transform: uppercase;
-      margin-bottom: 0.6em;
-    }
-    dd {
-      display: list-item;
-      list-style: disc;
-      color: #f89820;
-      margin-top: 0.3em;
-    }
-    dd span {
-      font-size: font-calc(16, rem, 10px);
-      color: #222;
-    }
-    article {
-      padding-bottom: 3em;
-      overflow: hidden;
-    }
-  }
-}
-
+// 'Component-ized' partials
+@import "components/home";
+@import "components/courses";
+@import "components/courseware";
+@import "components/dashboard";
+@import "components/account-settings";
