--- a/_sass/components/_dashboard.scss
+++ b/_sass/components/_dashboard.scss
@@ -1,33 +1,39 @@
 @import "variables";
 @import "functions";
 
-.profile-sidebar ul {
-  margin: 0;
-  padding: 0;
+.profile-sidebar {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    margin-top: 0;
+  }
+  h1 {
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+  h2 {
+    font: 900 1em/1.3 $gym-font-stack;
+    color: #222;
+    letter-spacing: 0.06em;
+    word-spacing: 0.04em;
+    text-transform: uppercase;
+    margin-bottom: 1em;
+  }
+  .profile {
+    padding: 1.2em 0;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+  }
+  .user-info {
+    ul {
+      list-style: none;
+    }
+  }
 }
-.profile-sidebar header {
-  margin-top: 0;
-}
-.profile-sidebar h1 {
-  font-weight: bold;
-  text-transform: capitalize;
-}
-.profile-sidebar h2 {
-  font: 900 1em/1.3 $gym-font-stack;
-  color: #222;
-  letter-spacing: 0.06em;
-  word-spacing: 0.04em;
-  text-transform: uppercase;
-  margin-bottom: 1em;
-}
-.profile-sidebar .profile {
-  padding: 1.2em 0;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-.profile-sidebar .user-info ul {
-  list-style: none;
-}
+
+
 .profile-sidebar .user-info .data,
 .profile-sidebar .user-info .status,
 .profile-sidebar .user-info .proivder,
