--- a/css/main.scss
+++ b/css/main.scss
@@ -167,7 +167,7 @@ white panel (used in multiple places)
   font-size: 1.2em;
   line-height: 1.5;
   margin: 20px auto;
-  padding: 1em;
+  padding: 1em 1em 1em 2em;
   overflow: hidden;
 
   ul {
