--- a/_sass/components/_dashboard.scss
+++ b/_sass/components/_dashboard.scss
@@ -4,6 +4,8 @@
 // Dashboard
 
 .dashboard-main {
+
+  // Reset font size
   &.white-panel {
     font-size: 1em;
   }
@@ -15,7 +17,6 @@
 
   .course-retired {
     font-size: 1.3225em;
-    color: $gym-white;
     margin: 1.2rem 0 0 0;
   }
 
@@ -25,86 +26,13 @@
 
 @include breakpoint(medium, max) {
 
-  .dashboard-main .my-courses {
-    border-right: 0;
-  }
-
   .dashboard-main .profile-sidebar {
     border-top: 1px dashed $gym-gray;
   }
 
 }
 
-.profile-sidebar {
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-  header {
-    margin-top: 0;
-  }
-  h1 {
-    font-weight: bold;
-    text-transform: capitalize;
-  }
-  h2 {
-    font: 900 1em/1.3 $gym-font-stack;
-    color: #222;
-    letter-spacing: 0.06em;
-    word-spacing: 0.04em;
-    text-transform: uppercase;
-    margin-bottom: 1em;
-  }
-  .profile {
-    padding: 1.2em 0;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-  }
 
-  .data,
-  .status,
-  .control {
-    font: 0.96em/1.2 $gym-text-font-stack;
-  }
-
-  .title {
-    display: block;
-    font: bold 1.2em/1.2 $gym-font-stack;
-    color: #222;
-    letter-spacing: 0.04em;
-    word-spacing: 0.04em;
-    margin-top: 1em;
-    margin-bottom: 0.5em;
-  }
-
-  .controls--account.password-reset {
-    margin-top: 2em;
-  }
-  .status {
-    width: 6.77966%;
-    display: inline-block;
-    color: #222;
-  }
-  .provider {
-    width: 66.57627%;
-    display: inline-block;
-  }
-  .control {
-    width: 15.25424%;
-    display: inline-block;
-    text-align: right;
-  }
-  .copy {
-    border: 0;
-    clip: rect(1px 1px 1px 1px);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-}
 
 .my-courses {
   .course-item {
@@ -117,10 +45,6 @@
       overflow: hidden;
       background-color: rgb(103, 103, 103);
       transition: background-color 250ms ease;
-  
-      p {
-        color: #ebebeb;
-      }
     }
   }
 
@@ -128,7 +52,7 @@
     background: #444;
 
     h1 {
-      font-size: font-calc(28, rem, 10px);
+      font-size: font-calc(25.2, rem, 10px);
     }
   }
 
@@ -159,3 +83,69 @@
 }
 
 
+// Dashboard Sidebar
+.profile-sidebar {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    margin-top: 0;
+  }
+  h1 {
+    font-weight: bold;
+    text-transform: capitalize;
+    font-size: 1.8em;
+  }
+  h2 {
+    font-size: 1em;
+    text-transform: uppercase;
+    margin-bottom: 1em;
+  }
+  .profile {
+    padding: 1.2em 0;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .data,
+  .status,
+  .control {
+    font-size: 0.96em;
+  }
+
+  .title {
+    display: block;
+    font-size: 1.2em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    font-weight: bold;
+  }
+
+  .controls--account.password-reset {
+    margin-top: 2em;
+  }
+  .status {
+    width: 6.77966%;
+    display: inline-block;
+  }
+  .provider {
+    width: 66.57627%;
+    display: inline-block;
+  }
+  .control {
+    width: 15.25424%;
+    display: inline-block;
+    text-align: right;
+  }
+  .copy {
+    border: 0;
+    clip: rect(1px 1px 1px 1px);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+}
