--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -3,6 +3,7 @@
 
 // 'Component-ized' partials
 @import "components/home";
+@import "components/logistration";
 @import "components/courses";
 @import "components/courseware";
 @import "components/dashboard";
