--- a/_sass/components/_logistration.scss
+++ b/_sass/components/_logistration.scss
@@ -1,6 +1,29 @@
 @import 'variables';
 @import 'functions';
 
+form {
+  input, select, textarea {
+    display: block;
+    height: 32px;
+    width: 100%;
+    margin: 0 0 0.6em;
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #f8971d;
+    font-size: 1em;
+  }
+
+  input {
+    height: auto;
+  }
+
+  select {
+    cursor: pointer;
+  }
+
+
+}
+
 .login-register {
   background-color: transparent;
   max-width: none;
@@ -17,15 +40,14 @@
     background-color: $gym-white;
   }
 
-  input {
+  .note {
+    font-weight: bold;
+    color: #222;
     display: block;
-    height: auto;
-    font-size: 1em;
-    padding: 1em;
-    border: 1px solid #ccc;
-    border-bottom: 2px solid #f8971d;
-    margin: 0 0 0.6em;
-    width: 100%;
+    margin: 10px 10px 0 10px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 17.76px;
   }
 }
 
