--- a/_sass/components/_logistration.scss
+++ b/_sass/components/_logistration.scss
@@ -11,6 +11,11 @@ form {
     border: 1px solid #ccc;
     border-bottom: 2px solid #f8971d;
     font-size: 1em;
+
+    &.error {
+      border: 1px solid #d43f3a;
+      outline: 1px solid #d43f3a;
+    }
   }
 
   select {
@@ -23,6 +28,20 @@ form {
     font-family: $gym-font-stack;
     font-weight: bold;
     margin-bottom: 0.6em;
+
+    &.error {
+      display: inline-block;
+      color: #fff;
+      padding: 0.5em;
+      background: #d43f3a;
+      border-radius: 2px;
+    }
+  
+    &.focus-out {
+      position: static;
+      opacity: 1;
+      z-index: auto;
+    }
   }
 
   input[type=checkbox], input[type=radio] {
@@ -38,6 +57,8 @@ form {
     width: 100%;
     margin: 0.6em 0 1.4em 0;
   }
+
+
 }
 
 .login-register {
