--- a/_sass/components/_logistration.scss
+++ b/_sass/components/_logistration.scss
@@ -6,7 +6,7 @@ form {
     display: block;
     height: auto;
     width: 100%;
-    margin: 0;
+    margin: 0 0 0.6em;
     padding: 1em;
     border: 1px solid #ccc;
     border-bottom: 2px solid #f8971d;
@@ -59,7 +59,9 @@ form {
     margin: 0.6em 0 1.4em 0;
   }
 
-
+  input+.tip-input {
+    margin-top: 0.6em;
+  }
 }
 
 .login-register {
@@ -99,6 +101,10 @@ form {
 
 .form-wrapper  {
   padding: 20px 0;
+}
+
+.logistration-button {
+  font-size: 1.5em;
 }
 
 .logistration-bottom {
