--- a/_sass/components/_dashboard.scss
+++ b/_sass/components/_dashboard.scss
@@ -89,13 +89,11 @@
     margin: 0;
     padding: 0;
   }
-  header {
-    margin-top: 0;
-  }
   h1 {
     font-weight: bold;
     text-transform: capitalize;
     font-size: 1.8em;
+    margin: 0;
   }
   h2 {
     font-size: 1em;
