--- a/_sass/components/_account-settings.scss
+++ b/_sass/components/_account-settings.scss
@@ -2,3 +2,11 @@
 @import 'functions';
 
 // Account Settings
+.wrapper-account-settings {
+
+
+}
+
+.account-settings-container {
+  .wrapper-header { display: none; }
+}
