--- a/css/forum-hacks.scss
+++ b/css/forum-hacks.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-// Please update the ./scss/components/_forum.scss partial instead of this
+// Please update the ./scss/pages/_forum.scss partial instead of this
 
-@import 'components/forum';
+@import 'pages/forum';
