--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,46 @@
 @import "functions";
 @import "mixins";
 @import "variables";
-@import "typography";
+@import "components/typography";
+@import "components/resets";
 
 // Render font face rules
 @include font-brandon;
 @include font-awesome; // TODO: are we using this? Yes! We use it on the course nav accordion right caret icon. Also, in the forum.
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:after,
+:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html, body {
+  background-color: #fff;
+  font-family: $gym-text-font-stack;
+  font-style: normal;
+  line-height: 1em;
+}
+html {
+  font-size: 10px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body {
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  margin: 0;
+}
+
+[tabindex="-1"] {
+  outline: none;
+}
 
 // TODO: clean these up to the best of our ability
 @import "migrated-vendor";
